# AgenticAICoach

cv_coach/: .env.example  .gitignore  README.md  pyproject.toml
cv_coach/src/agentic_cv_advisor/: agent.py  agents.py  crew.py  crews.py  main.py  sqlite.py  task.py  tasks.py
cv_coach/src/agentic_cv_advisor/config/: agents.yaml  tasks.yaml
knowledgebase_learning/: README.md
knowledgebase_learning/src/learning_pdf_agent/: main.py
